test_suite/tests/ui/fail/invalid_attr_value_for_arg/invalid_arg_name.stderr
error: custom attribute panicked
 --> $DIR/invalid_arg_name.rs:3:1
  |
3 | #[command]
  | ^^^^^^^^^^
  |
  = help: message: arg `name` must be a string literal
